--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,41 +1,48 @@
 .header {
-    margin: 0;
     height: 80px;
-    background-color: #162026;
+    background-color: white;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    top: 0;
+    width: 100%;
+    position: fixed;
+    z-index: 2;
 }
 
 .header-logo {
+    border: none;
+    background-color: inherit;
+    font-family: 'Montserrat', sans-serif;
     font-size: 30px;
-    font-weight: 600;
-    color: white;
+    font-weight: 700;
+    color: black;
     margin: 0;
-    margin-left: 7%;
+    margin-left: 10%;
+    cursor: pointer;
 }
 
 .header-box {
-    margin-right: 7%;
-    /* background-color: aliceblue; */
+    margin-right: 10%;
     height: 30px;
     display: flex;
     justify-content: space-between;
-    width: 50%;
+    width: 39%;
 }
 
 .header-box > button {
+    font-family: 'Montserrat', sans-serif;
+    margin-inline: 5px;
     padding: 0;
     border: none;
     text-align: center;
     background-color: inherit;
-    color: white;
+    color: black;
     font-size: 18px;
     cursor: pointer;
     display: inline-block;
     position: relative;
-
 }
 
 .header-box > button:after {
@@ -46,7 +53,7 @@
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: white;
+    background-color: black;
     transform-origin: bottom right;
     transition: transform 0.25s ease-out;
   }
