--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -21,6 +21,11 @@
     margin: 0;
     margin-left: 10%;
     cursor: pointer;
+    transition-duration: 0.4s;
+}
+
+.header-logo:hover {
+    color: #5941F2;
 }
 
 .header-box {
