--- a/src/components/Admin/Create.css
+++ b/src/components/Admin/Create.css
@@ -1,5 +1,6 @@
 .createpage {
     background-color: lightsalmon;
+    padding-bottom: 100px;
 }
 
 .create-form {
@@ -35,10 +36,14 @@
 }
 
 .create-form > h2 > span {
+    color: gray;
     font-size: 18px;
     font-weight: 400;
-    color: gray;
     float: right;
+}
+
+.error {
+    color: rgb(238, 72, 72);
 }
 
 .create textarea {
@@ -81,6 +86,26 @@
     background-color: inherit;
 }
 
+.review-button {
+    margin-top: 30px;
+    height: 50px;
+    width: 100%;
+    border: none;
+    background-color: lightgray;
+    color: gray;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    cursor: pointer;
+    transition-duration: 0.4s;
+}
+
+.review-button:hover {
+    border: 1.5px solid black;
+    color: black;
+    background-color: inherit;
+}
+
 .publishing {
     width: 100%;
     display: flex;
@@ -97,4 +122,28 @@
 .publishing > h4 {
     margin-top: 10px;
     font-weight: 400;
+}
+
+.review {
+    margin-top: 80px;
+    background-color: black;
+    /* position: fixed; */
+    top: 0;
+    left: 0;
+    width: 100%;   
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    overflow-y: scroll;
+}
+
+.review > BlogPrev {
+}
+
+.review-box {
+    position: absolute;
+    width: 100px;
+    height: 300px;
+    background-color: white;
 }
