--- a/src/components/HomePage/BlogList.css
+++ b/src/components/HomePage/BlogList.css
@@ -89,26 +89,6 @@
     justify-content: space-between;
 }
 
-/* .bloglist-cont-button-even {
-    margin: 0;
-    margin-top: 20px;
-    height: 50px;
-    width: 180px;
-    border: none;
-    background-color: #ebffa4;
-    color: black;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 18px;
-    cursor: pointer;
-    transition-duration: 0.4s;
-}
-
-.bloglist-cont-button-even:hover {
-    border: 2px solid black;
-    color: black;
-    background-color: inherit;
-} */
-
 .bloglist-cont-vert-even {
     margin: 0;
     /* background-color: antiquewhite; */
@@ -122,4 +102,22 @@
     align-items: flex-end;
     justify-content: center;
     text-align: right;
+}
+
+/* PREV */
+
+.bloglist-cont-picbox-prev {
+    margin: 0;
+    min-width: 350px;
+    width: 60%;
+    height: 250px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    background-color: gray;
+}
+
+.cardprev {
+    padding-top: 50px;
+    background-color: white;
 }
