added a review blog option as a popup in the admin create blog section, made the website fully responsive, navbar edited for responsiveness

--- a/src/components/Admin/Delete.css
+++ b/src/components/Admin/Delete.css
@@ -20,6 +20,23 @@
     font-size: 45px;
 }
 
+.delete-titlelink:link {
+    text-decoration: none;
+    color: black;
+    transition-duration: 0.4s;
+}
+
+.delete-titlelink:visited {
+    text-decoration: none;
+    color: black;
+}
+
+.delete-titlelink:hover {
+    text-decoration: none;
+    color: black;
+    opacity: 50%;
+}
+
 .delete-title > p {
     margin: 0;
     font-size: 18px;
