--- a/src/components/Admin/Create.css
+++ b/src/components/Admin/Create.css
@@ -26,6 +26,23 @@
     font-size: 45px;
 }
 
+.create-titlelink:link {
+    text-decoration: none;
+    color: black;
+    transition-duration: 0.4s;
+}
+
+.create-titlelink:visited {
+    text-decoration: none;
+    color: black;
+}
+
+.create-titlelink:hover {
+    text-decoration: none;
+    color: black;
+    opacity: 50%;
+}
+
 .create-title > p {
     margin: 0;
     font-size: 18px;
@@ -124,26 +141,45 @@
     font-weight: 400;
 }
 
-.review {
-    margin-top: 80px;
-    background-color: black;
-    /* position: fixed; */
+.review-page {
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;   
     height: 100%;
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    overflow-y: scroll;
+    align-items: center;
+    z-index: 1;
 }
 
-.review > BlogPrev {
-}
-
-.review-box {
-    position: absolute;
-    width: 100px;
-    height: 300px;
+.review {
+    width: 90%;
+    height: 100%;
     background-color: white;
+    z-index: 1;
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
+
+.reviewpage-button {
+    width: 80%;
+    min-height: 100px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 35px;
+    font-weight: 600;
+    margin-bottom: 20px;
+    cursor: pointer;
+    transition-duration: 0.4s;
+    border: 5px solid black;
+    background-color: whitesmoke;
+}
+
+.reviewpage-button:hover {
+    background-color: lightsalmon;
+}
+
+
