--- a/src/components/Blog.css
+++ b/src/components/Blog.css
@@ -5,7 +5,7 @@
 
 .blog-mainimgbox {
     width: 100%;
-    height: 400px;
+    height: 500px;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -57,21 +57,21 @@
 
 .blog-name {
     color: #5941F2;
-    font-weight: 600;
-    font-size: 22px;
+    font-weight: 700;
+    font-size: 18px;
     padding-bottom: 50px;
 }
 
 .blog-name > span {
     color: gray;
     font-size: 18px;
-    margin-right: 10px;
+    margin-right: 5px;
     font-weight: 400;
 }
 
 .blog-text {
     font-size: 18px;
-    letter-spacing: 0.5px;
+    letter-spacing: 1px;
     word-spacing: 2px;
     line-height: 30px;
     text-align: justify;
@@ -80,7 +80,7 @@
 .blog-secimgbox {
     margin-inline: 20%;
     margin-bottom: 20px;
-    margin-top: 50px;
+    margin-top: 60px;
     height: 400px;
     overflow: hidden;
     display: flex;
@@ -110,7 +110,7 @@
     background-color: gray;
     margin-inline: 20%;
     margin-bottom: 20px;
-    margin-top: 50px;
+    margin-top: 60px;
     height: 400px;
     overflow: hidden;
     display: flex;
@@ -120,11 +120,78 @@
 
 .blog-editor {
     padding-top: 60px;
-    padding-bottom: 20px;
+    padding-bottom: 0px;
     margin-inline: 20%;
     font-family: 'Montserrat', sans-serif;
 }
 
 .blog-editor > * {
     margin-bottom: 50px;
+}
+
+
+@media only screen and (max-width: 1300px) {
+    
+}
+
+@media only screen and (max-width: 1050px) {
+    .blog-mainimgbox-cont {
+        margin-inline: 17.5%;
+    }
+    .blog-mainimgbox {
+        height: 400px;
+    }
+    .blog-mainimg {
+        width: 120%;
+    }
+    .blog-secimgbox {
+        margin-bottom: 0px;
+        height: 300px;
+        margin-inline: 17.5%;
+    }
+    .blog-secimg {
+        width: 130%;
+    }
+    .blog-editor {
+        margin-inline: 17.5%;
+    }
+    .blog-name {
+        margin-inline: 17.5%;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .blog-mainimgbox-cont {
+        margin-inline: 15%;
+    }
+    .blog-mainimgbox {
+        width: auto;
+        height: 400px;
+    }
+    .blog-title {
+        font-size: 35px;
+    }
+    .blog-mainimgbox-cont {
+        margin-inline: 15%;
+    }
+    .blog-editor {
+        margin-inline: 15%;
+    }
+    .blog-name {
+        margin-inline: 15%;
+    }
+    .blog-secimgbox {
+        margin-inline: 0;
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    
+    .blog-mainimg {
+        width: 150%;
+    }
+    .blog-editor {
+        padding-top: 40px;
+    }
 }
