--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -11,6 +11,7 @@
     min-height: 350px;
     grid-template-columns: repeat(4, 1fr);
     margin-inline: 10%;
+    /* background-color: aliceblue; */
 }
 
 .footer-column {
@@ -118,4 +119,59 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.footer-link {
+    text-decoration: none;
+    color: white;
+}
+
+.columntype4 {
+    padding-right: 20px;
+}
+
+@media only screen and (max-width: 1100px) {
+    .footer-grid {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    .columntype1 {
+        flex: 0 0 calc(100% / 2);
+    }
+    .columntype2 {
+        flex: 0 0 calc(100% / 4);
+    }
+    .columntype3 {
+        flex: 0 0 calc(100% / 4);
+    }
+    .columntype4 {
+        padding-top: 25px;
+        flex: 0 0 100%;
+    }
+}
+
+@media only screen and (max-width: 750px) {
+    .footer-grid {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    .footer-column {
+        padding-top: 0;
+        padding-right: 20px;
+    }
+    .columntype1 {
+        padding-top: 80px;
+        flex: 0 0 100%;
+    }
+    .columntype2 {
+        flex: 0 0 calc(100% / 2);
+    }
+    .columntype3 {
+        flex: 0 0 calc(100% / 2);
+    }
+    .columntype4 {
+        flex: 0 0 100%;
+    }
 }
