--- a/src/components/Header/Profile.css
+++ b/src/components/Header/Profile.css
@@ -193,3 +193,20 @@
 .profile-loading {
     height: 30px;
 }
+
+@media only screen and (max-width: 880px) {
+    .profile-title {
+        width: 100%;
+    }
+    .profile {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .profile {
+        margin-inline: 5%;
+        width: 100%;
+    }
+}
