--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -8,7 +8,7 @@
     top: 0;
     width: 100%;
     position: fixed;
-    z-index: 2;
+    z-index: 5;
 }
 
 .header-logo {
@@ -30,15 +30,17 @@
 
 .header-box {
     margin-right: 10%;
-    height: 30px;
+    height: 100%;
     display: flex;
     justify-content: space-between;
-    width: 39%;
+    align-items: center;
+    width: 38.88%;
 }
 
-.header-box > button {
+.header-button1 {
     font-family: 'Montserrat', sans-serif;
     margin-inline: 5px;
+    height: 30px;
     padding: 0;
     border: none;
     text-align: center;
@@ -50,7 +52,7 @@
     position: relative;
 }
 
-.header-box > button:after {
+.header-button1:after {
     content: '';
     position: absolute;
     width: 100%;
@@ -61,9 +63,148 @@
     background-color: black;
     transform-origin: bottom right;
     transition: transform 0.25s ease-out;
-  }
-  
-  .header-box > button:hover:after {
+}
+
+.header-box > button:hover:after {
     transform: scaleX(1);
     transform-origin: bottom left;
-  }
+}
+
+.header-button2 > img {
+    height: 45px;
+
+}
+
+.header-button2 {
+    margin-right: 10%;
+    padding: 0;
+    height: 50px;
+    width: 50px;
+    opacity: 0%;
+    display: none;
+    cursor: pointer;
+    background-color: inherit;
+    border: none;
+    transition-duration: 0.4s;
+}
+
+.header-button2:hover {
+    opacity: 50%;
+}
+
+.drop-page {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 1;
+}
+
+.drop-back {
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 20%;
+}
+
+.drop-clicktracker {
+    height: 100%;
+    width: 100%;
+    opacity: 0%;
+}
+
+.drop {
+    position: fixed;
+    right: 0;
+    top: 0;
+    background-color: whitesmoke;
+    height: 100%;
+    width: 50%;
+    z-index: 2;
+    padding-top: 80px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
+    text-align: right;
+}
+
+.drop > hr {
+    margin: 0;
+    width: 100%;
+    border: 1px solid black;
+    opacity: 8%;
+}
+
+.drop-link {
+    text-align: right;
+    border: none;
+    background-color: inherit;
+    padding-block: 20px;
+    padding-right: 22%;
+    padding-left: 20px;
+    width: 100%;
+    color: black;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+.drop-link:hover {
+    background-color: white;
+}
+@media only screen and (max-width: 2000px) {
+    .header-box {
+        width: 39.1%;
+    }
+}
+
+@media only screen and (max-width: 1650px) {
+    .header-box {
+        width: 38.9%;
+    }
+}
+
+@media only screen and (max-width: 1300px) {
+    .header-box {
+        width: 38.7%;
+    }
+}
+
+@media only screen and (max-width: 1050px) {
+    .header-box {
+        width: 38.3%;
+    }
+}
+
+@media only screen and (max-width: 950px) {
+    .header-box {
+        display: none;
+    }
+    .header-button2 {
+        display: flex;
+        opacity: 100%;
+    }
+}
+
+@media only screen and (max-width: 750px) {
+    .drop {
+        width: 62.5%;
+    }
+
+    .drop-link {
+        padding-right: 18%;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .drop {
+        width: 75%;
+    }
+
+    .drop-link {
+        padding-right: 16%;
+    }
+}
