--- a/src/components/Blog.css
+++ b/src/components/Blog.css
@@ -126,9 +126,29 @@
 }
 
 .blog-editor > * {
-    margin-bottom: 50px;
+    margin: 0;
 }
 
+.blog-editor > p {
+    margin-bottom: 35px;
+}
+
+.blog-editor > h1 {
+    margin-bottom: 30px;
+}
+
+.blog-editor > h2 {
+    margin-bottom: 20px;
+}
+
+.blog-editor > h3 {
+    margin-bottom: 10px;
+}
+
+.blog-editor > h4 {
+    font-weight: 400;
+    margin-bottom: 10px;
+}
 
 @media only screen and (max-width: 1300px) {
     
