--- a/src/components/Page404.css
+++ b/src/components/Page404.css
@@ -8,39 +8,19 @@
 
 .page404-box {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     width: 100%;
     margin-inline: 10%;
     padding: 20px;
     padding-block: 50px;
 }
 
-.page404-box-cont {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    width: 50%;
-}
-
-.page404-img {
-    margin: 0;
-    padding: 0;
-    padding-inline: 50px;
-    width: 100%;
-    min-width: 300px;
-    max-width: 400px;
-}
-
-.page404-box-imgcont {
-    width: 50%;
-    height: 100%;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.page404-loading {
+    height: 200px;
+    opacity: 10%;
 }
 
 .page404-404 {
@@ -51,27 +31,19 @@
 
 .page404-desc {
     margin: 0;
-    font-size: 18px;
+    font-size: 25px;
     font-weight: 500;
     margin-bottom: 30px;
 }
 
 @media only screen and (max-width: 500px) {
+    .page404-loading {
+        height: 150px;
+    }
+    .page404-desc {
+        font-size: 18px;
+    }
     .page404 {
         margin-top: 70px;
-    }
-    .page404-box {
-        margin-inline: 0;
-        flex-direction: column;
-    }
-    .page404-box-cont {
-        padding-inline: 10px;
-        text-align: center;
-        width: 100%;
-        justify-content: center;
-        align-items: center;
-    }
-    .page404-img {
-        min-width: 250px;
     }
 }
