--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -7,10 +7,13 @@
 }
 
 .footer-grid {
-    display: grid;
+    /* display: grid; */
     min-height: 350px;
-    grid-template-columns: repeat(4, 1fr);
+    /* grid-template-columns: repeat(4, 1fr); */
     margin-inline: 10%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     /* background-color: aliceblue; */
 }
 
@@ -130,6 +133,19 @@
 
 .columntype4 {
     padding-right: 20px;
+}
+
+.columntype1 {
+    flex: 0 0 calc(100% / 16 * 6);
+}
+.columntype2 {
+    flex: 0 0 calc(100% / 16 * 3);
+}
+.columntype3 {
+    flex: 0 0 calc(100% / 16 * 3);
+}
+.columntype4 {
+    flex: 0 0 calc(100% / 16 * 4);
 }
 
 @media only screen and (max-width: 1100px) {
