--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,6 +1,7 @@
 .header {
     height: 80px;
-    background-color: white;
+    background-color: #458C78;
+    /* background-color: rgb(28, 27, 27); */
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -18,20 +19,19 @@
     font-family: 'Montserrat', sans-serif;
     font-size: 30px;
     font-weight: 700;
-    color: black;
+    color: white;
     margin: 0;
     margin-left: 10%;
     cursor: pointer;
     transition-duration: 0.4s;
 }
 
-.header-logo-img {
-    height: 25px;
-
+.header-logo:hover {
+    opacity: 60%;
 }
 
-.header-logo:hover {
-    color: #5941F2;
+.header-logo-img {
+    height: 25px;
 }
 
 .header-box {
@@ -51,7 +51,7 @@
     border: none;
     text-align: center;
     background-color: inherit;
-    color: black;
+    color: white;
     font-size: 18px;
     cursor: pointer;
     display: inline-block;
@@ -66,7 +66,7 @@
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: black;
+    background-color: white;
     transform-origin: bottom right;
     transition: transform 0.25s ease-out;
 }
@@ -205,18 +205,20 @@
 
 @media only screen and (max-width: 500px) {
     .header {
-        height: 70px;
+        height: 60px;
     }
     .header-logo {
         margin-left: 5%;
-        font-size: 25px;
+    }
+    .header-logo-img {
+        height: 22px;
     }
     .header-button2 {
         margin-right: 5%;
     }
     .drop {
         width: 75%;
-        padding-top: 70px;
+        padding-top: 60px;
     }
     .drop-link {
         padding-block: 15px;
