--- a/src/components/Admin/Admin.css
+++ b/src/components/Admin/Admin.css
@@ -1,5 +1,5 @@
 .admin {
-    background-color: lightsalmon;
+    background-color: #F2F2F2;
     padding-bottom: 100px;
 }
 
@@ -8,7 +8,7 @@
     height: 250px;
     display: flex;
     align-items: center;
-    background-color: lightsalmon;
+    background-color: #F2F2F2;
 }
 
 .admin-title {
@@ -36,7 +36,7 @@
     border: 3px solid black;
     text-align: center;
     margin-bottom: 50px;
-    transition-duration: 0.4;
+    transition-duration: 0.4s;
 }
 
 .admin-linklink:link {
@@ -50,5 +50,5 @@
 }
 
 .admin-link:hover {
-    background-color: rgb(252, 175, 144);
+    background-color: white;
 }
