--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,7 +1,6 @@
 .header {
     height: 80px;
-    background-color: #458C78;
-    /* background-color: rgb(28, 27, 27); */
+    background-color: transparent;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -11,6 +10,30 @@
     position: fixed;
     z-index: 5;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    transition-duration: 0.6s;
+}
+
+.header-active {
+    background-color: #458C78;
+    height: 80px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    top: 0;
+    width: 100%;
+    position: fixed;
+    z-index: 5;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    transition-duration: 0.6s;
+}
+
+.header-active button {
+    color: white;
+}
+
+.header-active button:after {
+    background-color: white;
 }
 
 .header-logo {
@@ -51,7 +74,7 @@
     border: none;
     text-align: center;
     background-color: inherit;
-    color: white;
+    color: black;
     font-size: 18px;
     cursor: pointer;
     display: inline-block;
@@ -66,7 +89,7 @@
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: white;
+    background-color: black;
     transform-origin: bottom right;
     transition: transform 0.25s ease-out;
 }
